[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "akross"
version = "0.0.1"
maintainers = [
    {name = "Yongwoo Park", email = "nnnlife@gmail.com"},
]
license = {text = "BSD-3-Clause"}
description = "akross library and agent" 
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: Jython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = []
requires-python = ">=3.4"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/nnnlife/akross_client"
Source = "https://github.com/nnnlife/akross_client"

[project.optional-dependencies]

[tool.setuptools]
zip-safe = true
include-package-data = false
packages = ["akross", "akross.agent", "akross.providers.cybos", "akross.providers.upbit"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.rst"]
